@@ -1,0 +1,4 @@
+include ChangeLog README COPYING AUTHORS NEWS setup.py test.py config_unix.py prebuild.sh
+recursive-include src/ *.c *.h
+recursive-include debian/ *
+prune debian/CVS
